Fix modal overflow

--- a/src/app/components/modal/modal.less
+++ b/src/app/components/modal/modal.less
@@ -12,7 +12,7 @@
         .modal-backdrop {
             opacity: 0.7;
         }
-        .modal-content {
+        .modal-box {
             top: 0;
         }
     }
@@ -27,6 +27,14 @@
         transition: opacity 0.3s ease-in-out;
     }
     .modal-content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+    }
+    .modal-box {
         position: relative;
         top: -100%;
         margin: 100px auto;
